microfinance/trunk/src/objects/Savings_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <formula>Total_Deposits__c +  Total_Interest__c -  Total_Withdrawals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Interest_Rate__c</fullName>
        <formula>Savings_Product__r.Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Interest Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Type__c</fullName>
        <formula>CASE(Savings_Product__r.Deposit_Type__c , &apos;Voluntary&apos;,  &apos;Voluntary&apos;, &apos;Mandatory&apos;,  &apos;Mandatory&apos;,&apos;Not Defined&apos;)</formula>
        <label>Deposit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Calculation_Frequency__c</fullName>
        <formula>CASE( Savings_Product__r.Interest_Rate_Calculation_Frequncy__c ,&apos;Weekly&apos;,&apos;Weekly&apos;, &apos;Biweekly&apos;, &apos;Biweekly&apos;,&apos;Monthly&apos;,&apos;Monthly&apos;,&apos;Not Defined&apos;)</formula>
        <label>Interest Rate Calculation Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Amount_Per_Withdrawal__c</fullName>
        <formula>Savings_Product__r.Max_Amount_Withdrawal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Amount Per Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Balance_For_Interest__c</fullName>
        <formula>Savings_Product__r.Min_Balance_for_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Balance For Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recommended_Amount__c</fullName>
        <formula>Savings_Product__r.Recommended_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Savings_Product__c</fullName>
        <description>Savings Product from which account is to be derived.</description>
        <label>Savings Product</label>
        <referenceTo>Savings_Product__c</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Refer to http://www.mifos.org/knowledge/functional-specifications/account-creation/savings-accounts for explanation of various status values.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Deposits__c</fullName>
        <label>Total Deposits</label>
        <summarizedField>Savings_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Savings_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Savings_Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Savings_Transaction__c.Savings_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Interest__c</fullName>
        <label>Total Interest</label>
        <summarizedField>Savings_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Savings_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Savings_Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Interest</value>
        </summaryFilterItems>
        <summaryForeignKey>Savings_Transaction__c.Savings_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Withdrawals__c</fullName>
        <label>Total Withdrawals</label>
        <summarizedField>Savings_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Savings_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Savings_Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Withdrawal</value>
        </summaryFilterItems>
        <summaryForeignKey>Savings_Transaction__c.Savings_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Savings Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Savings Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Savings Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>